# Toybox-JIMS-AssetLoader-Plugin

./: CMakeLists.txt  JIM Asset Loader.plugin  JSIM Asset Loader.plugin  premake5.lua
Shaders/: CMakeLists.txt
Shaders/Source/: TIMSShaderLoaderPlugin.cpp  TIMSShaderLoaderPlugin.h
Source/: JIMAssetLoaderPlugin.cpp  JIMAssetLoaderPlugin.h  TIMSAssetLoaderPlugin.cpp  TIMSAssetLoaderPlugin.h
Text/: CMakeLists.txt
Text/Source/: TIMSTextLoaderPlugin.cpp  TIMSTextLoaderPlugin.h
Textures/: CMakeLists.txt
Textures/Source/: TIMSTextureLoaderPlugin.cpp  TIMSTextureLoaderPlugin.h
